--- a/src/styles.css
+++ b/src/styles.css
@@ -56,7 +56,16 @@ body{
         display: block;
         margin-top:39px;
     }
+
+    .social-media{
+        margin-left:10px;
+    }
     
+    .user{
+        font-size: 20px;
+        font-weight:bold;
+        color:white;
+    }
     .container{
     max-width: 600px;
     margin: 60px auto;
