--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,7 @@ body{
     h2{
         font-size:27px;
     }
+
     
     h3{
         font-size:20px;
@@ -89,6 +90,10 @@ body{
         
         h2 {
             font-size: 15px;
+        }
+
+        .title-content{
+            margin-top:40px;
         }
     
         h3 {
